--- a/_config.yml
+++ b/_config.yml
@@ -19,14 +19,13 @@
 # in the templates via {{ site.myvariable }}.
 
 title: My Blog
-email: your-email@example.com
-description: >- # this means to ignore newlines until "baseurl:"
-  This my jornal for publishing my life journey.
+email: indikaimk@gmail.com
+description: ""
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: indikaimk
 github_username:  indikaimk
-
+permalink: /:categories/:title/
 # Build settings
 theme: minima
 plugins:
